[gd_scene load_steps=16 format=2]

[ext_resource path="res://ScoreScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Buttons/close_button_up.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Buttons/okay_button_up.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Buttons/close_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Buttons/okay_button_down.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Buttons/close_button_down.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Buttons/okay_button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Text/you_died_text.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Game/Enviroment/Background.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;


uniform vec4 c1 : hint_color;
uniform vec4 c2 : hint_color;

uniform sampler2D pn1;
uniform sampler2D pn2;
uniform vec2 world_pos;
uniform vec2 scaling = vec2(1,1);
uniform vec2 world_scaling = vec2(1,1);

void fragment()
{
	vec3 color;
	float n1 = texture(pn1, scaling * (UV.xy + world_pos/world_scaling)).r;
	float n2 = texture(pn2, scaling * (UV.xy + world_pos/world_scaling)).r;
	n1 = smoothstep( 0.13, 1.0, (n1 + n2)/2.0);
	//color = vec3(n1);
	color = c1.rgb * n1 + c2.rgb * n2;
	
	COLOR = vec4(color, n1);
}"

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 1
period = 138.0
persistence = 0.229
lacunarity = 3.03

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/c1 = Color( 0.894118, 0.0470588, 0.0470588, 1 )
shader_param/c2 = Color( 0.207843, 0.215686, 0.686275, 1 )
shader_param/world_pos = Vector2( 503.349, 294.448 )
shader_param/scaling = Vector2( 1, 1 )
shader_param/world_scaling = Vector2( 100, 100 )
shader_param/pn1 = SubResource( 3 )
shader_param/pn2 = SubResource( 5 )

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.431373, 0.431373, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 172.739
margin_right = 118.0
margin_bottom = 227.739
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="ColorRect/HBoxContainer"]
margin_right = 116.0
margin_bottom = 55.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 2 )

[node name="Okay" type="TextureButton" parent="ColorRect/HBoxContainer"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 55.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 385.946
margin_top = 167.751
margin_right = 606.946
margin_bottom = 314.751
color = Color( 0.321569, 0.321569, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -53.8434
margin_right = 53.5
margin_bottom = 20.1566
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ColorRect/VBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "Enter your Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ColorRect/ColorRect/VBoxContainer"]
margin_top = 50.0
margin_right = 107.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
margin_left = 386.0
margin_top = 109.708
margin_right = 607.0
margin_bottom = 164.708
color = Color( 0.321569, 0.321569, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -11.0
margin_right = 53.5
margin_bottom = 11.0
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="ColorRect/ColorRect2/VBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.0
margin_top = 56.1515
margin_right = 83.0
margin_bottom = 96.1515
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Background" parent="." instance=ExtResource( 9 )]
material = SubResource( 6 )
position = Vector2( 503.349, 294.448 )
scale = Vector2( 10.6596, 18.7932 )
[connection signal="button_up" from="ColorRect/HBoxContainer/Close" to="." method="_on_Close_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/Okay" to="." method="_on_Okay_button_up"]
